// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeScreen tests View Shows 'Cargando...' when the user is not loaded 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#bee6ef",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
      "paddingTop": 17.5,
    }
  }
>
  <Text>
     Cargando... 
  </Text>
</View>
`;

exports[`HomeScreen tests View Shows 'Se ha producido un error...' when the fetch failed 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#bee6ef",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
      "paddingTop": 17.5,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#3b2868",
        "fontFamily": "montserrat-extra-bold",
        "fontSize": 38.95833442608516,
        "textAlign": "center",
      }
    }
  >
     Se ha producido un error 
  </Text>
</View>
`;
